apps/rybbit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rybbit-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: rybbit.nasus.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: rybbit-backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rybbit-client
                port:
                  name: http
  tls:
    - hosts:
        - rybbit.nasus.dev
      secretName: rybbit-tls
